--- a/eas.json
+++ b/eas.json
@@ -1,23 +1,25 @@
 {
   "cli": {
-    "version": ">= 16.2.0",
-    "appVersionSource": "remote"
+    "version": ">= 3.0.0",
+    "appVersionSource": "local"
   },
+
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal",
-      "channel": "development"
+      "channel": "dev"
     },
     "preview": {
       "distribution": "internal",
-      "channel": "preview"
+      "channel": "dev"
     },
     "production": {
       "autoIncrement": true,
       "channel": "production"
     }
   },
+
   "submit": {
     "production": {}
   }
