--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "react-native-mmkv",
       "expo-router",
       [
         "expo-splash-screen",
