--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "scheme": "joi",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": false,
+
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.xplorr.Joi",
@@ -15,6 +16,7 @@
         "ITSAppUsesNonExemptEncryption": false
       }
     },
+
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
@@ -22,11 +24,13 @@
       },
       "package": "com.xplorr.Joi"
     },
+
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+
     "plugins": [
       "expo-router",
       [
@@ -39,24 +43,16 @@
         }
       ]
     ],
+
     "experiments": {
       "typedRoutes": true
     },
-    "extra": {
-      "router": {
-        "origin": false
-      },
-      "eas": {
-        "projectId": "afa10f6a-dbed-4a23-ab8c-1eff82475d75"
-      }
-    },
+
     "runtimeVersion": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
+
     "updates": {
-      "fallbackToCacheTimeout": 0,
-      "url": "https://u.expo.dev/afa10f6a-dbed-4a23-ab8c-1eff82475d75"
+      "fallbackToCacheTimeout": 0
     }
   }
 }
