joi removed fron app.json

--- a/app.json
+++ b/app.json
@@ -46,11 +46,14 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    
     "extra": {
       "router": {
         "origin": false
       },
-    }
+      "eas": {
+        "projectId": "e37a7eed-7207-4be0-ae58-eb26a8656660"
+      }
+    },
+    "owner": "xplorr"
   }
 }
