feat: enable OTA updates with Expo URL configuration and channel settings

--- a/eas.json
+++ b/eas.json
@@ -10,12 +10,18 @@
       "distribution": "internal",
       "channel": "dev"
     },
+
     "preview": {
       "distribution": "internal",
       "channel": "dev"
     },
+
     "production": {
-      "autoIncrement": true,
+      "channel": "production"
+    },
+
+    "dev-release": {
+      "distribution": "internal",
       "channel": "production"
     }
   },
