--- a/ios/Joi2049/Supporting/Expo.plist
+++ b/ios/Joi2049/Supporting/Expo.plist
@@ -5,10 +5,12 @@
     <key>EXUpdatesCheckOnLaunch</key>
     <string>ALWAYS</string>
     <key>EXUpdatesEnabled</key>
-    <false/>
+    <true/>
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
     <key>EXUpdatesRuntimeVersion</key>
     <string>1.0.0</string>
+    <key>EXUpdatesURL</key>
+    <string>https://u.expo.dev/d52e7dc8-b81f-495f-a4c3-15fb85e04cb4</string>
   </dict>
 </plist>
