--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     },
-    "moduleResolution": "node",
     "skipLibCheck": true,
     "allowJs": true,
     "noImplicitAny": false
