--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,6 @@
+source 'https://cdn.cocoapods.org/'
+source 'https://github.com/CocoaPods/Specs.git'
+
 require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
 
@@ -42,7 +45,11 @@ target 'Joi2049' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/..",
     :privacy_file_aggregation_enabled => podfile_properties['apple.privacyManifestAggregationEnabled'] != 'false',
+    :fabric_enabled => false
   )
+  
+  # Fix for ReactAppDependencyProvider
+  pod 'ReactAppDependencyProvider', :path => './ReactAppDependencyProvider.podspec'
 
   post_install do |installer|
     react_native_post_install(
