--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "joi",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "private": true,
+
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -11,55 +13,60 @@
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
+
+  "jest": { "preset": "jest-expo" },
+
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+
     "expo": "^53.0.9",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.20",
-    "expo-document-picker": "~13.0.3",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.20",
-    "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "^0.27.4",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "expo-blur": "~14.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.1.8",
+    "expo-document-picker": "~13.1.5",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-sharing": "~13.1.5",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-updates": "^0.28.13",
+    "expo-web-browser": "~14.1.6",
+
+    "fs-extra": "^11.3.0",
+    "web-streams-polyfill": "^4.1.0",
+
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-calendars": "^1.1311.1",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-mmkv": "^3.2.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
+
     "zustand": "^5.0.4"
   },
+
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
+    "@types/react": "~19.0.10",
+    "@types/react-test-renderer": "~19.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
-    "react-test-renderer": "18.3.1",
+    "jest-expo": "~53.0.5",
+    "react-test-renderer": "19.0.0",
     "typescript": "^5.3.3"
-  },
-  "private": true
+  }
 }
