--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     },
     "skipLibCheck": true,
     "allowJs": true,
@@ -12,9 +14,12 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "**/*.tsx"
   ],
-  "exclude": ["node_modules", "dist", ".expo", ".git"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    ".expo",
+    ".git"
+  ]
 }
