refactor: migrate iOS app to Swift and remove Android support files

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "joi",
   "version": "1.0.0",
   "private": true,
-
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
@@ -13,20 +12,18 @@
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
-
-  "jest": { "preset": "jest-expo" },
-
+  "jest": {
+    "preset": "jest-expo"
+  },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
-    "expo-dev-client": "~5.1.8",
     "expo-document-picker": "~13.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -39,25 +36,21 @@
     "expo-system-ui": "~5.0.7",
     "expo-updates": "^0.28.13",
     "expo-web-browser": "~14.1.6",
-
     "fs-extra": "^11.3.0",
-    "web-streams-polyfill": "^4.1.0",
-
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "^0.79.2",
     "react-native-calendars": "^1.1311.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
-    "react-native-web": "^0.20.0",
+    "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-
+    "web-streams-polyfill": "^4.1.0",
     "zustand": "^5.0.4"
   },
-
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
