--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-runtime": "5.0.4",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -38,9 +39,8 @@
     "expo-updates": "^0.28.13",
     "expo-web-browser": "~14.1.6",
     "fs-extra": "^11.3.0",
-    "web-streams-polyfill": "^4.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "^0.79.2",
     "react-native-calendars": "^1.1311.1",
     "react-native-gesture-handler": "~2.24.0",
@@ -50,6 +50,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "web-streams-polyfill": "^4.1.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -60,9 +61,9 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
+    "kill-port": "^2.0.1",
     "react-test-renderer": "19.0.0",
-    "typescript": "^5.3.3",
-    "kill-port": "^2.0.1"
+    "typescript": "^5.3.3"
   },
   "expo": {
     "doctor": {
