fix: implement withErrorOverlay patch and update entry point configuration for Expo Router

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "joi",
   "version": "1.0.0",
   "private": true,
-  "main": "./entry.js",
+  "main": "index.js",
   "scripts": {
     "start": "node ./scripts/expo-patch.js && expo start",
     "start-clean": "npx kill-port 8081 8082 && node ./scripts/expo-patch.js && expo start -c",
@@ -30,7 +30,7 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.7",
+    "expo-router": "^5.0.7",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
