--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "web-streams-polyfill": "^4.1.0",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.4",
+    "expo-dev-client": "~5.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
