--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-webview": "13.13.5",
     "web-streams-polyfill": "^4.1.0",
     "zustand": "^5.0.4",
-    "expo-dev-client": "~5.1.8"
+    "expo-dev-client": "~5.1.8",
+    "expo-linear-gradient": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
