--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.1.8",
     "expo-document-picker": "~13.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "^5.0.7",
     "expo-sharing": "~13.1.5",
@@ -43,6 +45,7 @@
     "react-dom": "19.0.0",
     "react-native": "^0.79.2",
     "react-native-calendars": "^1.1311.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -51,9 +54,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "web-streams-polyfill": "^4.1.0",
-    "zustand": "^5.0.4",
-    "expo-dev-client": "~5.1.8",
-    "expo-linear-gradient": "~14.1.4"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
