feat: add offline build profile to EAS configuration

--- a/eas.json
+++ b/eas.json
@@ -23,6 +23,11 @@
     "dev-release": {
       "distribution": "internal",
       "channel": "production"
+    },
+
+    "offline": {
+      "distribution": "internal",
+      "channel": "production"
     }
   },
 
